# braque

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
assets/shaders/: build_shaders.sh  camera_ubo.glsl  sky.frag  sky.vert  tonemapping.glsl  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
cmake/: build-shaders.cmake
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/braque/: asset_loader.h  braque.h  buffer.h  camera.h  camera.hpp  debug_window.h  debug_window.hpp  engine.h  engine.hpp  engine_context.h  frame_stats.h  frame_stats.hpp  image.h  image.hpp  image_loader.h  input_controller.h  memory_allocator.h  memory_allocator.hpp  pipeline.h  pipeline.hpp  renderer.h  renderer.hpp  rendering_stage.h  rendering_stage.hpp  scene.h  shader.h  shader.hpp  swapchain.h  swapchain.hpp  texture.h  uniforms.h  uniforms.hpp  window.h  window.hpp
engine/include/braque/input/: app_controller.h  event.h  event_controller.h  fps_controller.h  input_controller.h
engine/src/: asset_loader.cc  buffer.cc  camera.cc  camera.cpp  debug_window.cpp  engine.cpp  frame_stats.cpp  image.cpp  image_loader.cc  input_controller.cpp  memory_allocator.cpp  pipeline.cpp  renderer.cpp  rendering_stage.cpp  scene.cc  shader.cpp  swapchain.cpp  texture.cc  uniforms.cc  uniforms.cpp  window.cpp
engine/src/input/: app_controller.cpp  fps_controller.cc  input_controller.cc
examples/: CMakeLists.txt
examples/src/: demo.cc  packer.cc
src/: debug_window.cpp  debug_window.hpp  engine.cpp  engine.hpp  image.cpp  image.hpp  main.cpp  memory_allocator.cpp  memory_allocator.hpp  renderer.cpp  renderer.hpp  rendering_stage.cpp  rendering_stage.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  test_loader.cc  test_renderer.cpp
